--- a/OpenSourceLibrary/开源库常见问题.md
+++ b/OpenSourceLibrary/开源库常见问题.md
@@ -144,6 +144,38 @@ client = new OkHttpClient.Builder()
 
 　　而任务的执行主要靠拦截器来完成。
 
+## 3.5. 你们用的 okhttp ？那你有没有做过一些网络优化呢？比如弱网环境。
+
+目的：主要是减少用户等待时间，提升用户体验
+
+可以优化的地方：
+
+1. 前后端采用 gzip 方式请求和响应
+
+前端在请求header添加："content-encoding" 为 "gzip"
+
+后端也要开启 gzip，才能生效
+
+相比不采用 gzip 的请求方式，能节省流量，可以快速响应
+
+android：OKHttp 请求框架默认支持 gzip，不需要额外配置
+
+2. 图片
+
+ （1）不同分辨率的图片：先用图片控件宽高占位显示，根据网络情况 3g 4g wifi 请求不同分辨率图片的方式
+
+ （2）用小的图片格式：比如 webp，一张图片 jpg 的图片转换成 webp 格式，大小甚至达到十分之一。
+
+3. 数据库
+
+  用数据库缓存配合网络请求完成数据的显示，
+
+   例子：先读取数据库中数据显示，网络请求并行进行，响应后更新 UI 显示和数据库数据。
+
+4. 交互设计也可以提升用户体验
+
+5. webView加载
+
 # 4. Retrofit
 
 　　Retrofit 是一个网络请求框架的封装。网络请求的工作本质上是 OkHttp 完成的，而 Retrofit 仅负责网络请求接口的封装。
