--- a/network/网络常见问题2.md
+++ b/network/网络常见问题2.md
@@ -300,3 +300,35 @@ http/2.0简介 https://blog.csdn.net/lhZero_F/article/details/89356674
 * **服务端推送（Server Push）**
 
 　　服务端推送是一种在客户端请求之前发送数据的机制。在 HTTP/2 中，服务器可以对客户端的一个请求发送多个响应。Server Push 让 HTTP1.x 时代使用内嵌资源的优化手段变得没有意义；如果一个请求是由你的主页发起的，服务器很可能会响应主页内容、logo 以及样式表，因为它知道客户端会用到这些东西。这相当于在一个 HTML 文档内集合了所有的资源，不过与之相比，服务器推送还有一个很大的优势：可以缓存！也让在遵循同源的情况下，不同页面之间可以共享缓存资源成为可能。
+
+# 6. 简述七层网络模型
+
+　　TCP/IP 协议毫无疑问是互联网的基础协议，没有它就根本不可能上网，任何和互联网有关的操作都离不开 TCP/IP 协议。不管是 OSI 七层模型还是 TP/IP 的四层、五层模型，每一层中都要自己的专属协议，完成自己相应的工作以及与上下层级之间进行沟通。由于 OSI 七层模型为网络的标准层次划分，所以以 OSI 七层模型为例从下向上进行一一介绍。
+
+![](J:/zhangmiao/android_learning_notes/network/image/OSI七层模型.png)
+
+![](J:/zhangmiao/android_learning_notes/network/image/OSI的网络模型层.png)
+
+　　TCP/IP 协议参考模型把所有的 TCP/IP 系列协议归类到四个抽象层中：
+
+* 应用层：TETP、HTTP、SNMP、FTP、SMTP、DNS、Telnet 等。
+* 传输层：TCP、UDP。
+* 网络层：IP、ICMP、OSPF、EIGRP、IGMP。
+* 数据链路层：SLIP、CSLIP、PPP、MTU。
+
+　　每一抽象层建立在低一层提供的服务商，并且为高一层提供服务，看起来大概是这样子的。
+
+![](J:/zhangmiao/android_learning_notes/network/image/协议服务1.png)
+
+　　会话层、表示层和应用层重点：
+
+1. 数据传输基本单位为报文；
+2. 包含的主要协议：FTP（文件传送协议）、Telnet（远程登录协议）、DNS（域名解析协议）、SMTP（邮件传送协议）、POP3（邮局协议）、HTTP 协议（Hyper Text Transfer Protocal）。
+
+　　OSI 是一个理想的模型，一般的网络系统只涉及其中的几层，在七层模型中，每一层都提供一个特殊的网络功能，从网络功能角度观察：
+
+* 下面 4 层（物理层、数据链路层、网络层和输出层）主要提供数据传输和交换功能，即以节点到节点之间的通信为主
+* 第 4 层作为上下两部分的桥梁，是整个网络体系结构中最关键的部分
+* 上 3 层（会话层、表示层和应用层）则以提供用户与应用程序之间的信息和数据处理功能为主。
+
+　　简而言之，下 4 层主要完成通信子网的功能，上 3 层主要完成资源子网的功能。
