--- a/network/网络常见问题2.md
+++ b/network/网络常见问题2.md
@@ -220,6 +220,8 @@ http/2.0简介 https://blog.csdn.net/lhZero_F/article/details/89356674
 
 客户端使用对称加密生成密钥对传输数据进行加密，然后使用非对称加密的公钥再对密钥进行加密，所以网络上传输的数据是被密钥加密的密文和用公钥加密后的秘密密钥，因此即使被黑客截取，由于没有私钥，无法获取到加密明文的密钥，便无法获取到明文数据。
 
+## 4.4. HTTPS 如何认证
+
 # 5. http 1.0 、1.1 和 2.0 的区别 
 
 ## 5.1. HTTP 1.0
@@ -305,9 +307,9 @@ http/2.0简介 https://blog.csdn.net/lhZero_F/article/details/89356674
 
 　　TCP/IP 协议毫无疑问是互联网的基础协议，没有它就根本不可能上网，任何和互联网有关的操作都离不开 TCP/IP 协议。不管是 OSI 七层模型还是 TP/IP 的四层、五层模型，每一层中都要自己的专属协议，完成自己相应的工作以及与上下层级之间进行沟通。由于 OSI 七层模型为网络的标准层次划分，所以以 OSI 七层模型为例从下向上进行一一介绍。
 
-![](J:/zhangmiao/android_learning_notes/network/image/OSI七层模型.png)
+![](image/OSI七层模型.png)
 
-![](J:/zhangmiao/android_learning_notes/network/image/OSI的网络模型层.png)
+![](image/OSI的网络模型层.png)
 
 　　TCP/IP 协议参考模型把所有的 TCP/IP 系列协议归类到四个抽象层中：
 
@@ -318,7 +320,7 @@ http/2.0简介 https://blog.csdn.net/lhZero_F/article/details/89356674
 
 　　每一抽象层建立在低一层提供的服务商，并且为高一层提供服务，看起来大概是这样子的。
 
-![](J:/zhangmiao/android_learning_notes/network/image/协议服务1.png)
+![](image/协议服务1.png)
 
 　　会话层、表示层和应用层重点：
 
@@ -332,3 +334,8 @@ http/2.0简介 https://blog.csdn.net/lhZero_F/article/details/89356674
 * 上 3 层（会话层、表示层和应用层）则以提供用户与应用程序之间的信息和数据处理功能为主。
 
 　　简而言之，下 4 层主要完成通信子网的功能，上 3 层主要完成资源子网的功能。
+
+# 7. HTTPS 攻击
+
+[HTTPS 中间人攻击及其防范](https://segmentfault.com/a/1190000013075736)
+
