--- a/network/网络常见问题1.md
+++ b/network/网络常见问题1.md
@@ -153,6 +153,10 @@
 
 　　因为在客户端向服务器发送 FIN 报文时，仅仅标识对象不再发送数据了但是还能接收数据，服务器也未必全部数据都发送给对方了，也可能还有部分数据需要发送，所以需要等待服务器将数据发送完毕，再发送 FIN 报文给客户端表示服务器数据也发送完了，这时客户端和服务器才可以关闭连接。
 
+### 4.2.2. 为什么需要 2MSL 时间
+
+　　主要有两个原因，一个是为了让服务端能够按照正常步骤进入 CLOSED 状态，二是为了防止已经失效的请求连接报文出现在下次连接中。
+
 # 5. TCP 和 UDP 是什么？区别？
 
 ## 5.1. TCP
