--- a/database/数据库的常见问题.md
+++ b/database/数据库的常见问题.md
@@ -1,6 +1,36 @@
 # 数据库的常见问题
 
-## 1. 说说数据库的三大范式
+# 1. 说说数据库的三大范式
+
+第一范式：每个属性只有一个，没有重复的。
+
+第二范式：所有数据和主键有完全依赖关系。
+
+第三范式：要求所有非键属性都只和候选键有关，也就是说非键属性之间应该是独立无关的。
+
+# 2. sqlite 怎么降级
+
+在 sqlite 的 onDowngradle() 方法中处理版本降级的情况。
+
+处理一般就是：1. 恢复上个版本的结构，创建上个版本的表。2. 将数据拷贝到新的表中。3. 将现在的数据表 drop。如果降级失败，则直接 drop 当前表，创建新的数据表。
+
+# 3. sql 处理事物
+
+```java
+db.beginTransaction();  //开启事务
+try{
+    db.execSQL("delete from book where id=?", new String[]{"3"});
+    if(true){
+        throw new NullPointerException(); 
+    }
+    db.execSQL("insert into book (name, author, price, pages) values (?, ?, ?, ?)", 
+        new String[]{"name", "author", "9.99", "234"});
+}catch(Exception ex){
+    ex.printStackTrace();
+}finally{
+    db.endTransaction();    //结束事务
+}
+```
 
 
 
