--- a/OpenSourceLibrary/开源库常见问题.md
+++ b/OpenSourceLibrary/开源库常见问题.md
@@ -140,7 +140,7 @@ client = new OkHttpClient.Builder()
 
 ## 3.4. okhttp源码：分发器和五大拦截器； 
 
-　　Okhttp 的同步请求和以部请求都会交给分发器去执行，同步请求时降任务直接加入到同步执行队列中，异步请求是将任务异步运行队列中，并且会交给线程持执行。
+　　Okhttp 的同步请求和以部请求都会交给分发器去执行，同步请求时将任务直接加入到同步执行队列中，异步请求是将任务异步运行队列中，并且会交给线程池执行。
 
 　　而任务的执行主要靠拦截器来完成。
 
@@ -307,7 +307,7 @@ Glide.with(Context context).load(Strint url).into(ImageView imageView);
 
    DataFetcher 是用于延迟检索加载资源的数据的接口。方法 loadData() 用于异步从解码资源中获取数据。
 
-3. into() 方法主要分为三个部分：1. 请求数据；2. 将请求的数据解析转换为图片格式；3. 将图片显示到 ImageView 上。into() 方法会创建 Target 对象（负责将占位符，错误占位图，图片显示在 ImageView 上，就是控制 view 的显示）和创建 GenericRequest 对象（负责请求和请求回调），1. 请求数据：GenericRequest 会创建 EngineJob 对向获取数据，EngineJob 对象会在线程池中运行获取数据的操作，获取数据的时候会先从缓存中获取，如果缓存中没有，则从资源中获取，在资源中获取数据是调用的 DataFetcher 的 loadData() 方法。2.解析数据：获得数据后调用 ResourceDecoder 类的 decode() 方法解析数据，并且会对图片进行压缩、旋转、圆角等处理，数据转换成了 Bitmap 或者 Gif 数据格式，最后会将 Bitmap 和 Gif 数据封装到 GifBitmapWrapper 中，会将获取到的 Resource 数据进行缓存。3.显示图片：将 GifBitmapWrapper 转换为 Bitmap 或者 Gif 可以直接使用的数据后，会采用 handler 向主线程发送 Message 消息将结果传给主线程，在消息处理中会调用到 ImageViewTarget 的 setResource() 方法将图片显示到控件上。
+3. into() 方法主要分为三个部分：1. 请求数据；2. 将请求的数据解析转换为图片格式；3. 将图片显示到 ImageView 上。into() 方法会创建 Target 对象（负责将占位符，错误占位图，图片显示在 ImageView 上，就是控制 view 的显示）和创建 GenericRequest 对象（负责请求和请求回调），1. 请求数据：GenericRequest 会创建 EngineJob 对象获取数据，EngineJob 对象会在线程池中运行获取数据的操作，获取数据的时候会先从缓存中获取，如果缓存中没有，则从资源中获取，在资源中获取数据是调用的 DataFetcher 的 loadData() 方法。2.解析数据：获得数据后调用 ResourceDecoder 类的 decode() 方法解析数据，并且会对图片进行压缩、旋转、圆角等处理，数据转换成了 Bitmap 或者 Gif 数据格式，最后会将 Bitmap 和 Gif 数据封装到 GifBitmapWrapper 中，会将获取到的 Resource 数据进行缓存。3.显示图片：将 GifBitmapWrapper 转换为 Bitmap 或者 Gif 可以直接使用的数据后，会采用 handler 向主线程发送 Message 消息将结果传给主线程，在消息处理中会调用到 ImageViewTarget 的 setResource() 方法将图片显示到控件上。
 
 4. Glide 缓存机制
 
