--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -18,7 +18,7 @@
 
 ### 2. 学习
 
-1. 整理 Android 知识文章 
+1. 整理 Android 知识文章 - 已完成
 2. 音视频方案知识学习
 3. Kotlin 知识学习
 4. Flutter 知识学习
@@ -176,7 +176,7 @@
 
 
 
-### 2020年8月
+### 2020 年 8 月
 
 1. B 树
 2.  基数排序
@@ -186,149 +186,20 @@
 6. 冒泡排序
 7. 简历
 
+### 2020 年 9 月
+
+1. glide 整理
+2. 面试找工作
 
 
-#### 计划
 
-1. 查找算法知识 
-2. 排序算法总结
-3. 快速排序
-4. 回溯算法
-5. 图
-6. 并查集
-7. 栈 
-8. glide 整理
-9. gradle
-10. 数据库
-11. NIO
-12. 组件化与插件化
-13. 适配
 
-## 盘点需要做的事情（详细）
-
-1. Android
-   * JobService 、JobSheduler
-   * Binder
-   * Intent
-   * HandlerThread
-   * Messenger - 多进程通信
-   * IdleHandler
-   * IntentService - Service 的知识里面有提到一些
-   * Window、Activity、DecorView 以及 ViewRoot 之间的关系
-   * AIDL
-   * PMS
-   * 屏幕适配
-   * 多进程通信
-   * ArrayDeque
-   * CopyOnWriteArrayList
-   * ArrayMap
-   * SpareArray
-   * nano ptotobufs
-   * 协程
-2. 开源库
-   * Glide
-   * Picasso
-   * eventBus
-   * ButterKnife
-   * RxAndroid
-   * XWalkView
-   * 插件化
-   * 热修复
-4. Java
-   * 线程
-   * hashCode
-   * arrayMap
-   * treeMap
-   * NIO
-   * String
-   * 动态代理类 Proxy
-   * PriorityQueue
-   * transient
-   * CopyOnWriteArrayList
-   * PriorityQueue
-5. 数据结构
-   * 链表与队列
-   * 树
-   * 哈希表
-   * 排序算法
-   * 查找算法
-6. 其他
-   * Gradle
 
 ## 后续
-
-1. Android Dex 分包 https://www.jianshu.com/p/e96f345e822f
-
-2. Okio
-
-3. Flutter 与 RN
-
-4. SurfaceView 
 
 5. 《 TCP / IP 详解卷一 》
 
 6. 《 HTTP 权威指南 》
 
-7. Java method 类
+3. 《深入理解 Android 卷 II - 卷 III》
 
-8. 《深入理解 Android 卷 II - 卷 III》
-
-9. WindowManager
-
-   [Android解析WindowManager（一）WindowManager体系](https://blog.csdn.net/itachi85/article/details/77888668)
-
-10. DiskLruCache
-
-    [Android DiskLruCache完全解析，硬盘缓存的最佳方案](https://blog.csdn.net/guolin_blog/article/details/28863651)
-    
-11. 类图、时序图的绘制
-
-12. GestureDetector
-
-13. Fiddler 使用教程
-
-    [fiddler4使用教程](https://blog.csdn.net/chaoyu168/article/details/51065644)
-    
-14. ArrayBlockingQueue 阻塞队列
-
-15. Java 注解
-
-    [Java 注解（Annotation）](https://www.runoob.com/w3cnote/java-annotation.html)
-
-16. 解析 html内容
-
-    [在 Android 应用中使用 HTML Parser 便捷的解析 html 内容](https://www.ibm.com/developerworks/cn/opensource/os-cn-android-hp/index.html)
-    
-17. Java 中字符串 String switch 的实现原理
-
-    [Java中字符串String Switch的实现原理](https://blog.csdn.net/MOLIILOM/article/details/51166697)
-    
-18. Java 线程的创建
-
-19. Java 数据类型
-
-20. java 读写文件的几种方式
-
-25. Vector
-
-26. SortedMap / TreeMap
-
-27. CopyOnWriteArrayList
-
-28. ConcurrentModificationException 异常
-
-29. Protocal buffers 
-
-26. ProGuard 
-
-27. [ContentProvider 之文件储存](https://blog.csdn.net/kaiwii/article/details/7780593)
-
-28. ActionBarDrawerToggle 
-
-29. LocalBroadcastManager 
-
-
-
-[这是一份面向Android开发者的复习指南](https://www.jianshu.com/p/b3c1b9c6dd40)
-
-https://www.jianshu.com/p/a8f7048a1575 面试题
