--- a/BookNote/非技术书籍/每天演好一个情绪稳定的成年人.md
+++ b/BookNote/非技术书籍/每天演好一个情绪稳定的成年人.md
@@ -16,44 +16,71 @@
 
 ## 目录
 
-Part Ⅰ 没错，长大是一件扫兴的事情
+* Part Ⅰ  没错，长大是一件扫兴的事情
+
 01　每天演好一个情绪稳定的成年人
 02　你和自己都相处不了，却总想和别人打好交道
 03　没错，长大是一件扫兴的事情
 04　万事开头难，中间难，结尾也难
-05 既对世俗投以白眼，又能与之 “ 同流合污 ”
-Part Ⅱ 是的，相爱就是两个人互相治疗精神病
-06 相爱就是两个人互相治疗精神病
-07 谢谢你，那么忙，还亲自来伤害我
-08　没有癞蛤蟆，天鹅也寂寞
-09 所谓代沟，其实是还没来得及理解的爱
-10 我们都擅长口是心非，又希望对方能有所察觉
-11 明明是你死皮赖脸，何必怪他不留情面
-Part Ⅲ 讲真的，如果吼可以解决问题，那么驴将统治世界
-12 评价别人容易，认识自己很难
-13 最高级的教养，就是时刻替别人着想
-14 静坐常思己过，闲谈莫论人非
+05    既对世俗投以白眼，又能与之 “ 同流合污 ”
+
+* Part Ⅱ  是的，相爱就是两个人互相治疗精神病
+
+06	相爱就是两个人互相治疗精神病
+07	谢谢你，那么忙，还亲自来伤害我
+08	没有癞蛤蟆，天鹅也寂寞
+09	所谓代沟，其实是还没来得及理解的爱
+10	我们都擅长口是心非，又希望对方能有所察觉
+11	明明是你死皮赖脸，何必怪他不留情面
+
+* Part Ⅲ  讲真的，如果吼可以解决问题，那么驴将统治世界
+
+12	评价别人容易，认识自己很难
+13	最高级的教养，就是时刻替别人着想
+14	静坐常思己过，闲谈莫论人非
 15　手里拿着锤子的人，看谁都像钉子
-16 如果要做圣母，请先以身作则
-Part Ⅳ 对不起，你的青春已余额不足，且无法充值
+16	如果要做圣母，请先以身作则
+
+* Part Ⅳ 对不起，你的青春已余额不足，且无法充值
+
 17　失败是成功之母，成功却六亲不认
-18 不按你所想的方式去活，就会按你所活的方式去想
-19 绝大多数的人生困境，都源自那该死的随波逐流
-20 自律是一场自己对自己发动的战争
-21 放弃不难，但坚持一定很酷
-22 优秀不是自我感觉，而是客观事实
-Part Ⅴ 实际上，时间只是一个自称能包治百病的庸医
-23 大脑是你的自留地，不是别人的跑马场
-24 勿因未候日光暖，擅自轻言世间寒
-25 时间只是一个自称能包治百病的庸医
-26 谁不是上一秒 “ 妈的 ”，下一秒 “ 好的 ”
-27 纯洁不是知道得少，而是坚守得多
+18	不按你所想的方式去活，就会按你所活的方式去想
+19	绝大多数的人生困境，都源自那该死的随波逐流
+20	自律是一场自己对自己发动的战争
+21	放弃不难，但坚持一定很酷
+22	优秀不是自我感觉，而是客观事实
+
+* Part Ⅴ 实际上，时间只是一个自称能包治百病的庸医
+
+23	大脑是你的自留地，不是别人的跑马场
+24	勿因未候日光暖，擅自轻言世间寒
+25	时间只是一个自称能包治百病的庸医
+26	谁不是上一秒 “ 妈的 ”，下一秒 “ 好的 ”
+27	纯洁不是知道得少，而是坚守得多
 
 # 摘录
 
-
+* 孤独是必然的，反正我是没有那种能够完全避开孤独的方法。但我想提醒你的是，不要把别人的冷漠当成自己孤独的原因！
+* 你起身敬往事一杯酒，结果往事对你说：“不好意思，我今天开车，不能喝酒。“
+* 生活的真相就是，除了容易长胖，其他的都挺难！
+* 我的院子里有四万万多玫瑰花，每天清晨，我捧一本书坐在院子里。所有的人路过，都要称赞我的玫瑰，也有想要折去一两朵的，我统统不理不睬。直到有一天，你来了，笑的眼睛眯成月牙。问我：”看的什么书啊？“我就知道，这四万朵玫瑰花，统统是你的。
+* 说话还是礼貌一些，毕竟不是谁都是你以为的那么和蔼可亲。
+* 出言有尺，嬉闹有度，做事有余，说话有德。
+* 但凡是喜欢评论别人的人，其生活的糟糕程度和他喷人的激烈程度，几乎是成正比的。
+* 劝服别人最有效的方式不是武力威胁，更不是道德绑架，而是坚持做你自己认为正确的事情；贯彻正义最重要的条件不是嗓门大，更不是道德高尚，而是自己变强大。
+* 人生在世，你只要知道两件事：一、这世上绝对存在不需要读书也很聪明，不需要努力也过得很好，甚至不需要钱就能快乐的人；二、哪个嗯绝对不是你。
+* 广为流传的墓志铭：当我年轻的时候，我的想象力从没有受到过限制，我梦想改变这个世界。当我成熟以后，我发现我不能改变这个世界，我将目光缩短了些，决定只改变我的国家。但是，我的国家似乎也是我无法改变的。当我进入暮年后，我发现我不能改变我的国家，我的最后愿望仅仅是改变一下我的家庭。但是，这也不可能。当我躺在床上，行将就木时，我突然意识到：如果一开始我仅仅去改变我自己，然后作为一个榜样，我可能改变我的家庭；在家人的帮助和鼓励下，我可能为国家做一些事情。然后谁知道呢？我甚至可能改变这个世界。
+* 世界的运行规则就是：你变优秀了，其他的事情才会跟着好起来。
+* 请务必照顾好你的身体，毕竟，你的心里已经被生活摧残得够变态了。
+* 笼鸡有食汤锅近，野鹤无粮天地宽。
+* 成熟就是，不再自命不凡，也不再妄自菲薄，对内消除傲慢，对外消除偏见。
+* 如此说来，没有哪一件感情是在浪费时间。如果它没有给你想要的，那么它一定让你知道：什么是自己不想要的。
+* 你要想超出你的同龄人一点，不能期待所有人都后退一点，而是你要比他们更加努力，更能坚持！
+* 时间只是一位自称自己能包治百病的庸医。它只负责流逝，不负责让你成长；它只负责掩埋，不负责疗伤；它注定带来苍老，但不一定带来成熟。
+* 它制造了很多美好的幻想，却留下了很多的遗憾；它只是一个无情的看客，而你要自行承担过程和结果。
+* 菜鸟的职场不是快不快乐的生活问题，而是钱够不够花的生存问题！
 
 # 感想
 
-
+　　一本讲做事、做人、工作的书，其实就是让你放松心态，看清事情，也有点想开点的感觉。看完感觉没有记住任何东西，闲来无事看看的书。不会看两遍。
 
