--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -45,6 +45,8 @@
 1. 《 好的婚姻，要守护财产和爱 》2020年1月
 2. 《 深入理解 Java 虚拟机 》 2020 年 3 月
 3.  《 年纪轻轻，就有了猫 》2020 年 3 月 
+4. 《 每天演好一个情绪稳定的成年人 》 2020 年 10 月
+5. 
 
 ### 影视
 
@@ -190,6 +192,16 @@
 
 1. glide 整理
 2. 面试找工作
+3. 搬到深圳
+4. 入职平安
+5. 回家结婚
+
+### 2020 年 10 月
+
+1. 国庆回家结婚
+2. 《每天演好一个情绪稳定的成年人》阅读完毕 2020 年 10 月 15 日
+3. 《Android 插件化开发指南》第一章完成 2020 年 10 月 19 日 
+4. 
 
 
 
