react native 读书笔记

--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -201,7 +201,10 @@
 1. 国庆回家结婚
 2. 《每天演好一个情绪稳定的成年人》阅读完毕 2020 年 10 月 15 日
 3. 《Android 插件化开发指南》第一章完成 2020 年 10 月 19 日 
-4. 
+
+### 2020 年 11 月
+
+1. 《React Native》第 1-2章完成
 
 
 
