总结与计划

--- a/plan/计划/2020年计划.md
+++ b/plan/计划/2020年计划.md
@@ -46,7 +46,7 @@
 2. 《 深入理解 Java 虚拟机 》 2020 年 3 月
 3.  《 年纪轻轻，就有了猫 》2020 年 3 月 
 4. 《 每天演好一个情绪稳定的成年人 》 2020 年 10 月
-5. 
+5. 《图解 HTTP》 2020 年 12 月
 
 ### 影视
 
@@ -205,6 +205,12 @@
 ### 2020 年 11 月
 
 1. 《React Native》第 1-2章完成
+
+### 20202 年 12 月
+
+1. 《React Native》阅读完毕
+2. 《思维导图完整手册》第一章
+3. 《图解 HTTP 》读书笔记完成
 
 
 
