--- a/plan/计划/2021年计划.md
+++ b/plan/计划/2021年计划.md
@@ -67,7 +67,10 @@
 书籍：《思维导图完整手册》
 ```
 
+### 1.6.1. 实施
 
+* 1 月 《思维导图完整手册》阅读完毕
+* 
 
 # 2. 生活
 
@@ -78,7 +81,20 @@
 定量：健身房每月 10 次
 ```
 
+### 2.1.1. 实施
 
+* 1 月
+* 2 月
+* 3 月
+* 4 月
+* 5 月
+* 6 月
+* 7 月
+* 8 月
+* 9 月
+* 10 月
+* 11 月
+* 12 月
 
 ## 2.2. 绘画
 
@@ -87,5 +103,16 @@
 定量：每月 5 张
 ```
 
+### 2.2.1. 实施
 
+* 1 月
+* 2 月
+* 3 月
+* 4 月
+* 5 月
+* 6 月
+* 7 月
+* 8 月
+* 9 月
+* 10 月
 
